# artboard

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.puml  design.md
include/artboard/: artboard.h
src/adapter/web/: Canvas2DTarget.cpp  Canvas2DTarget.h
src/anim/: Animation.cpp  Animation.h  Easing.cpp  Easing.h
src/core/: Color.cpp  Color.h  Geometry.cpp  Geometry.h
src/input/: GestureRecognizer.cpp  GestureRecognizer.h  Input.h  InputRouter.cpp  InputRouter.h
src/render/: RecordingTarget.cpp  RecordingTarget.h  RenderTarget.h
src/scene/: Artboard.cpp  Artboard.h  Drawable.h  Shapes.cpp  Shapes.h
tests/: MiniTest.h  coreTests.cpp
